# Self-Drive-ViP-2025-NYU

./: README.md  common_operations.md  visualization_config.rviz
devel/: .catkin  setup.sh
devel/lib/pkgconfig/: exploration.pc  navigation.pc  turtlebot3_teleop.pc
devel/lib/python3/dist-packages/turtlebot3_teleop/: __init__.py
devel/share/exploration/cmake/: explorationConfig.cmake
devel/share/navigation/cmake/: navigationConfig.cmake
devel/share/turtlebot3_teleop/cmake/: turtlebot3_teleopConfig.cmake
src/exploration/: CMakeLists.txt  package.xml
src/exploration/launch/: exploration.launch
src/exploration/scripts/: test_node1.py  test_node2.py
src/navigation/: CMakeLists.txt  codebook.pkl
src/navigation/launch/: navigation.launch  navigation_test.launch
src/navigation/scripts/: bag_player.py  rosbag_to_jpg.py  test_node_3.py  vlad_bag_processor.py  vlad_bag_processor_v2.py  vlad_bag_processor_v3.py
src/turtlebot3_teleop/nodes/: turtlebot3_teleop_key
